# CPP_GUI_CMAKE

./: CMakeLists.txt  README.md  setup.bat  setup_86.bat
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main_test.cpp
